2012-07-05  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n (geometry): [Bug 3538401]: Better description of the key
	difference between [wm geometry] and [winfo geometry]; the former
	represents the window manager's understanding, not Tk's.

2012-07-04  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinDialog.c (GetFileNameW): [Bug 3540127]: Clean up the tables
	of options for the file dialogs so that options are listed in error
	messages in alphabetical order.

2012-07-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: [Bug 3540127]: filebox.test fails on win32

2012-06-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/configure.in:  Link cygwin wish.exe with win32 tk.dll, only
	* unix/Makefile.in:   in combination with --enable-shared.
	* unix/tcl.m4:
	* unix/configure:     autoconf-2.59

2012-06-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/SetOptions.3:   [Frq-3536507]: clientData field in Tk_OptionSpec
	* generic/tk.h:       should be "const void *"
	* generic/tk*.c:      Eliminate many unnessessary type casts

2012-06-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in:    [Bug 1844430]: cygwin make fails in 8.4.14-8.5b3
	* unix/tcl.m4:        Sync with Tcl version.
	* unix/configure:     autoconf-2.59

2012-06-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.decls:    rfe-2636558 simplification. Restore forwards
	* generic/tkBitmap.c:  compatibility with Tk 8.5.
	* generic/tkdecls.h:
	* generic/tkStubInit.c:

2012-06-15  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkTreeview.c (unshareObj): [Bug 3535362]: Changed name
	of 'unshare' internal function to avoid clash with some libc versions.

2012-06-12  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (Tk_DrawChars, TkUnixSetXftClipRegion): Add some
	* generic/ttk/ttkEntry.c (EntryDisplay): special magic to make the
	* generic/ttk/ttkLabel.c (TextDraw): text clipping work right with the