@@ -1,3 +1,8 @@
+2012-07-05  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinDialog.c (GetFileNameW): [Bug 3540127]: Better solution,
+	using Tcl_GetIndexFromObj in stead of Tcl_GetIndexFromObjStruct
+
 2012-07-05  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/wm.n (geometry): [Bug 3538401]: Better description of the key
